terraform/security_groups.tf
# Day 6: Security Group with SSH (22), HTTP (80), Backend API (3000), Jenkins (8080)
resource "aws_security_group" "cinematch_sg" {
  name        = "cinematch-security-group"
  description = "Security group for CineMatch EC2 deployment"
  vpc_id      = aws_vpc.cinematch_vpc.id

  # SSH Access
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP Frontend
  ingress {
    description = "HTTP Web App"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Backend Express API
  ingress {
    description = "Express Node Backend API"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Jenkins Server
  ingress {
    description = "Jenkins Automation Server"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound Rule (Allow All)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cinematch-sg"
  }
}
